Adds support for java 11
Updates dependencies to latest versions available