@@ -18,9 +18,9 @@
   <properties>
     <boringssl.version>2.0.7.Final</boringssl.version>
     <jooby.version>1.5.1</jooby.version>
-    <jooq.version>3.11.4</jooq.version>
+    <jooq.version>3.11.5</jooq.version>
     <spek.version>1.2.1</spek.version>
-    <kotlin.version>1.2.61</kotlin.version>
+    <kotlin.version>1.2.71</kotlin.version>
     <hibernate-validator.version>6.0.7.Final</hibernate-validator.version>
     <freemarker.version>2.3.27-incubating</freemarker.version>
     <javax.el-api.version>3.0.0</javax.el-api.version>
@@ -132,7 +132,7 @@
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>materializecss</artifactId>
-      <version>1.0.0-rc.2</version>
+      <version>1.0.0</version>
     </dependency>
 
     <dependency>
@@ -159,7 +159,7 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>2.21.0</version>
+      <version>2.23.0</version>
       <scope>test</scope>
     </dependency>
 
@@ -172,7 +172,7 @@
     <dependency>
       <groupId>net.andreinc.mockneat</groupId>
       <artifactId>mockneat</artifactId>
-      <version>0.1.3</version>
+      <version>0.2.4</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -197,7 +197,7 @@
     <dependency>
       <groupId>org.junit.platform</groupId>
       <artifactId>junit-platform-runner</artifactId>
-      <version>1.0.0</version>
+      <version>1.3.1</version>
       <scope>test</scope>
     </dependency>
 
@@ -206,7 +206,20 @@
       <artifactId>fluent-hc</artifactId>
       <scope>test</scope>
     </dependency>
-
+    <dependency>
+      <groupId>org.glassfish.jaxb</groupId>
+      <artifactId>jaxb-runtime</artifactId>
+      <version>2.4.0-b180830.0438</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish</groupId>
+      <artifactId>javax.annotation</artifactId>
+      <version>10.0-b28</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jetbrains.kotlin</groupId>
+      <artifactId>kotlin-reflect</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
@@ -246,7 +259,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.5.1</version>
+        <version>3.8.0</version>
         <executions>
           <!-- Replacing default-compile as it is treated specially by maven -->
           <execution>
@@ -348,7 +361,7 @@
       <plugin>
         <groupId>org.pitest</groupId>
         <artifactId>pitest-maven</artifactId>
-        <version>1.4.2</version>
+        <version>1.4.3</version>
         <configuration>
           <mutators>
             <mutator>NEW_DEFAULTS</mutator>
@@ -370,6 +383,11 @@
     </plugins>
   </build>
   <repositories>
+    <repository>
+      <id>jvnet-nexus-staging</id>
+      <url>http://maven.java.net/content/repositories/staging/</url>
+      <layout>default</layout>
+    </repository>
     <repository>
       <id>jcenter</id>
       <url>https://jcenter.bintray.com/</url>
@@ -404,22 +422,34 @@
           <plugin>
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
-              <source>10</source>
-              <target>10</target>
-              <compilerArgs>
-                <arg>--add-modules=java.xml.bind</arg>
-                <arg>--add-modules=java.se.ee</arg>
-              </compilerArgs>
+              <source>11</source>
+              <target>11</target>
+              <!--<compilerArgs>
+                <arg>&#45;&#45;add-modules=java.xml.bind</arg>
+                <arg>&#45;&#45;add-modules=java.se.ee</arg>
+              </compilerArgs>-->
               <fork>true</fork>
             </configuration>
-            <!-- without forking compilation happens in the
-                                                                same process, so no arguments are applied -->
+            <dependencies>
+              <dependency>
+                <groupId>org.ow2.asm</groupId>
+                <artifactId>asm</artifactId>
+                <version>7.0-beta</version>
+              </dependency>
+            </dependencies>
           </plugin>
           <plugin>
             <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <argLine>--add-modules=java.xml.bind --add-modules=java.se.ee</argLine>
-            </configuration>
+            <!--<configuration>
+              <argLine>&#45;&#45;add-modules=java.xml.bind &#45;&#45;add-modules=java.se.ee</argLine>
+            </configuration>-->
+            <dependencies>
+              <dependency>
+                <groupId>org.ow2.asm</groupId>
+                <artifactId>asm</artifactId>
+                <version>7.0-beta</version>
+              </dependency>
+            </dependencies>
           </plugin>
         </plugins>
       </build>
